--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jshint": "^2.12.0",
     "mysql2": "^2.2.5",
-    "inquirer": "^8.2.4"
+    "inquirer": "^8.2.4",
+    "dotenv": "^8.2.0"
   }
 }
